# ocr-journey

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/seshat/: app.py  home.py
src/seshat/pages/: configuration.py
